--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,11 @@ dependencies = [
     "torch==2.8.0", "torchvision==0.23.0",
     "transformers==4.37.2", "tokenizers==0.15.1", "sentencepiece==0.1.99", "shortuuid",
     "accelerate==0.21.0", "peft", "bitsandbytes",
-    "pydantic<2,>=1", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
+    "pydantic<2,>=1", "markdown2[all]", "numpy==1.26.3", "scikit-learn==1.2.2",
     "gradio==3.35.2", "gradio_client==0.2.9",
     "requests", "httpx==0.24.0", "uvicorn", "fastapi",
     "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
+    "supervision==0.10.0"
 ]
 
 [project.optional-dependencies]
