--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,18 @@
 default_language_version:
   python: python3.11
 default_stages: [pre-commit]
+exclude: |
+  (?x)^(
+    .*/\\.git/.*|
+    .*/\\.venv/.*|
+    .*/venv/.*|
+    .*/build/.*|
+    .*/dist/.*|
+    .*/\\.cache/.*|
+    .*/__pycache__/.*|
+    scripts/.*|
+    checkpoints/.*
+  )$
 
 repos:
   - repo: local
@@ -20,13 +32,19 @@ repos:
 
       - id: flake8
         name: flake8
-        entry: flake8
+        entry: flake8 --max-line-length=120 --ignore=E501,E266,W503,F403,F405,E203,E741,F841,F541,E402,E731
         language: python
         types: [python]
 
-      - id: mypy
-        name: mypy
-        entry: mypy .
+      - id: autoflake
+        name: autoflake
+        entry: autoflake --in-place --remove-all-unused-imports
         language: python
         types: [python]
-        pass_filenames: false
+
+      # - id: mypy
+      #   name: mypy
+      #   entry: mypy . --exclude 'checkpoints/'
+      #   language: python
+      #   types: [python]
+      #   pass_filenames: false
